--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+mirage-tank = { version="0.2.1", git = "https://github.com/Nugine/mirage-tank.git" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
